[gd_scene load_steps=2 format=3 uid="uid://cm5vpgvkh4k8o"]

[ext_resource type="Script" path="res://multiplayerController.gd" id="1_ov1t7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ov1t7")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 41.0
offset_right = 155.0
offset_bottom = 91.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 188.0
offset_top = 41.0
offset_right = 295.0
offset_bottom = 91.0
text = "Join
"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 41.0
offset_right = 435.0
offset_bottom = 91.0
text = "Start Game
"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 120.0
offset_right = 173.0
offset_bottom = 167.0
text = "Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 127.0
offset_right = 423.0
offset_bottom = 158.0
max_length = 32

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
